--- a/DesginPatterns/single.html
+++ b/DesginPatterns/single.html
@@ -7,7 +7,8 @@
 <body>
 	<div id="loginBtn">Login</div>
 	<script type="text/javascript">
-	/*普通的单例模式
+	/*一、单例模式
+	普通的单例模式
 	**解释：这里充分利用了闭包和高阶函数的特点。
 	**1.通过高阶函数，在返回的函数内引用了div，则div会一直在那，不会被内存机制回收，
 	**因此就可以实现单例。
