--- a/CSS3/css3.html
+++ b/CSS3/css3.html
@@ -4,39 +4,42 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-		/*****************          1.伪类             ***********/
-/*		::before,::after一般用于画一些小图案，如分割线或者分割点等,作为元素的第一个子元素.
-		主要是content,content可以是符号,也可以为空,还可以是一句话*/
-/*		div.test::before {
-			content: "[";
-			color: black;
-		}
-		div.test::after {
-			content: "]";
-			color: red;
-		}*/
-/*		:hover 一般用在鼠标移入显示某个隐藏元素,
-		:focus 一般用在input聚焦后显示样式,
-		:invalid,valid 在输入合法及不合法的字符后显示样式,适合html5中新增的url,email等元素,
-		:active 一般会用在a,button标签上,按住鼠标的时候会显示样式,
-		:link 主要用在a标签,默认的链接的样式,
-		:visit 主要用在a标签,在a标签点击访问后显示样式,
-		:checked 主要用于<input type="radio">, <input type="checkbox">,<option>选择后显示样式
-		input.input-text:focus {
-			border: 2px solid red;
-		}
-		input:invalid {
-			border: 2px solid yellow;
-		}
-		span.test a:active {
-			color: red;
-			font-weight: bold;
-		}
-		input[type="radio"]:checked {
-		  margin-left: 25px;
-		}
-*/
-		/*****************          2.自定义radio             ***********/
+		/* 1.伪类
+		** ::before,::after一般用于画一些小图案，如分割线或者分割点等,作为元素的第一个子元素.
+		** 主要是content,content可以是符号,也可以为空,还可以是一句话
+		** div.test::before {
+		**	 content: "[";
+		**	 color: black;
+		** }
+		** div.test::after {
+		**	 content: "]";
+		**	 color: red;
+		** }
+		** :hover 一般用在鼠标移入显示某个隐藏元素,
+		** :focus 一般用在input聚焦后显示样式,
+		** :invalid,valid 在输入合法及不合法的字符后显示样式,适合html5中新增的url,email等元素,
+		** :active 一般会用在a,button标签上,按住鼠标的时候会显示样式,
+		** :link 主要用在a标签,默认的链接的样式,
+		** :visit 主要用在a标签,在a标签点击访问后显示样式,
+		** :checked 主要用于<input type="radio">, <input type="checkbox">,<option>选择后显示样式
+		** input.input-text:focus {
+		**  	border: 2px solid red;
+		** }
+		** input:invalid {
+		**  	border: 2px solid yellow;
+		** }
+		** span.test a:active {
+		**  	color: red;
+		**  	font-weight: bold;
+		** }
+		** input[type="radio"]:checked {
+		**    margin-left: 25px;
+		** }
+		*/
+		/* 2.自定义radio
+		** 这里的关键是运用到了:checked,还有一点是运用到了label标签的for绑定属性;
+		*/
+
 		label {
 		    display: inline-block;
 		    cursor: pointer;
