--- a/ES6/es6(1).html
+++ b/ES6/es6(1).html
@@ -48,9 +48,8 @@
 		// console.log(window.b,b); //undefined 1
 		(function(){
 			var i = "字符串模板"
-			document.body.innerHTML = `<div>${i}</div>`;
+			document.body.innerHTML = `<div class='abc' style='background:red;'>${i}</div>`;
 		})()
-		
 	</script>
 </body>
 </html>
