--- a/ES6/es6(1).html
+++ b/ES6/es6(1).html
@@ -37,19 +37,44 @@
 		//'I am inside!'
 
 		/*
-		**2.es6的顶层对象。确定了chrom支持es6语法
+		**2.es6的顶层对象。确定了chrome支持es6语法
 		*/
 		// var a = 1;
-		// // 如果在Node的REPL环境，可以写成global.a
+		// // 如果在Node的REPL环境，可以写成global.a,
 		// // 或者采用通用方法，写成this.a
+		// // 这里是渐进增强的用的var，而如果用let则就不会默认是window的属性了
 		// console.log(window.a); // 1
 
 		// let b = 1;
 		// console.log(window.b,b); //undefined 1
-		(function(){
-			var i = "字符串模板"
-			document.body.innerHTML = `<div class='abc' style='background:red;'>${i}</div>`;
+		
+		/*
+		**3.fetch
+		*/
+		(function () {
+			// fetch('https://api.github.com/users/chriscoyier/repos')
+  	// 		    .then(response => {console.log(response);response.json()})
+  	// 		    .then(data => {
+  	// 		    	console.log(data)
+  	// 		    })
+
+  			// fetch('https://api.github.com/users/chrissycoyier/repos')
+  			//   .then(response => {console.log(response);response.json()})
+  			//   .then(data => console.log('data is', data))
+  			//   .catch(error => console.log('error is', error));
+
+  			fetch('https://api.github.com/users/chrissycoyier/repos')
+			  .then(response => {
+			    if (response.ok) {
+			      return response.json()
+			    } else {
+			      return Promise.reject('something went wrong!')
+			    }
+			  })
+			  .then(data => console.log('data is', data))
+			  .catch(error => console.log('error is', error));
 		})()
+		
 	</script>
 </body>
 </html>
